Create HTML for sections 1 and 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         </div>
     </div>
     <div class="section-1">
+        <div class="container">
+            <div class="text">
 
+            </div>
+            <div class="image">
+
+            </div>
+        </div>
     </div>
     <div class="section-2">
         <div class="header">
@@ -26,16 +33,20 @@
         </div>
         <div class="boxes">
             <div class="box-1">
-
+                <div class="image"></div>
+                <div class="text"></div>
             </div>
             <div class="box-2">
-
+                <div class="image"></div>
+                <div class="text"></div>
             </div>
             <div class="box-3">
-
+                <div class="image"></div>
+                <div class="text"></div>
             </div>
             <div class="box-4">
-
+                <div class="image"></div>
+                <div class="text"></div>
             </div>
         </div>
     </div>
