Create HTML for all sections of webpage

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
     <div class="section-1">
         <div class="container">
             <div class="text">
-
+                <div class="header">This website is awesome</div>
+                <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="button">
+                    <button>Sign up</button>
+                </div>
             </div>
             <div class="image">
-
+                <div class="placeholder-text">
+                    This is a placeholder for an image
+                </div>
             </div>
         </div>
     </div>
@@ -34,30 +40,43 @@
         <div class="boxes">
             <div class="box-1">
                 <div class="image"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="box-2">
                 <div class="image"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="box-3">
                 <div class="image"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="box-4">
                 <div class="image"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
     <div class="section-3">
-
+        <div class="container">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="source">-Thor, God of Thunder</div>
+        </div>
     </div>
     <div class="section-4">
-
+        <div class="container">
+            <div class="text">
+                <div class="header">Call to action! It's time!</div>
+                <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="button">
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">
-
+        <p class="copyright">
+            Copyright @ The Odin Project 2021
+        </p>
     </div>
     
 </body>
