--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         </div>
         <div class="nav-links">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#" target="_blank">header link one</a></li>
+                <li><a href="#" target="_blank">header link two</a></li>
+                <li><a href="#" target="_blank">header link three</a></li>
             </ul>
         </div>
     </div>
     <div class="section-1">
         <div class="container">
             <div class="text">
-                <div class="header">This website is awesome</div>
+                <div class="section-1-header">This website is awesome</div>
                 <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <div class="button">
                     <button>Sign up</button>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="section-2">
-        <div class="header">
+        <div class="section-2-header">
             Some random information.
         </div>
         <div class="boxes">
@@ -66,7 +66,7 @@
     <div class="section-4">
         <div class="container">
             <div class="text">
-                <div class="header">Call to action! It's time!</div>
+                <div class="section-4-header">Call to action! It's time!</div>
                 <div class="subtext">Sign up for our product by clicking that button right over there!</div>
             </div>
             <div class="button">
