--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">
-            Header Logo
-        </div>
-        <div class="nav-links">
-            <ul>
-                <li><a href="#" target="_blank">header link one</a></li>
-                <li><a href="#" target="_blank">header link two</a></li>
-                <li><a href="#" target="_blank">header link three</a></li>
-            </ul>
+        <div class="header-content">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#" target="_blank">header link one</a></li>
+                    <li><a href="#" target="_blank">header link two</a></li>
+                    <li><a href="#" target="_blank">header link three</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="section-1">
-        <div class="container">
+        <div class="section-1-content">
             <div class="text">
                 <div class="section-1-header">This website is awesome</div>
-                <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <div class="button">
                     <button>Sign up</button>
                 </div>
