--- a/index.html
+++ b/index.html
@@ -37,25 +37,27 @@
         </div>
     </div>
     <div class="section-2">
-        <div class="section-2-header">
-            Some random information.
-        </div>
-        <div class="boxes">
-            <div class="box-1">
-                <div class="image"></div>
-                <div class="text">this is some subtext under an illustration or image</div>
+        <div class="section-2-content">
+            <div class="section-2-header">
+                Some random information.
             </div>
-            <div class="box-2">
-                <div class="image"></div>
-                <div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="box-3">
-                <div class="image"></div>
-                <div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="box-4">
-                <div class="image"></div>
-                <div class="text">this is some subtext under an illustration or image</div>
+            <div class="boxes">
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
     </div>
